<resources>
    <string name="app_name">CalculadoraIMC</string>
    <string name="peso">Peso</string>
    <string name="altura">Altura</string>
    <string name="calcular">Calcular</string>
    <string name="abaixo_peso">Menos do que 18,5 - Abaixo do peso</string>
    <string name="abaixo_normal">Entre 18,5 e 24,9  - Peso normal</string>
    <string name="abaixo_sobrepeso">Entre 25 e 29,9  - Sobrepeso</string>
    <string name="abaixo_obesidade1">Entre 30 e 34,9  - Obesidade grau 1</string>
    <string name="abaixo_obesidade2">Entre 35 e 39,9  - Obesidade grau 2</string>
    <string name="abaixo_obesidade3">Mais do que 40 - Obesidade grau 3</string>
</resources>
