<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/text_imc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="IMC"
        android:textAlignment="center"
        android:textSize="100sp" />

    <TextView
        android:id="@+id/text_sublinhado"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_imc"
        android:layout_centerHorizontal="true"
        android:background="@drawable/separator" />

    <TextView
        android:id="@+id/text_abaixo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_sublinhado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/abaixo_peso"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_abaixo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/abaixo_normal"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_sobrepeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_normal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/abaixo_sobrepeso"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_obesidade1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_sobrepeso"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/abaixo_obesidade1"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_obesidade2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_obesidade1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/abaixo_obesidade2"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_obesidade3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_obesidade2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/abaixo_obesidade3"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>