<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_peso"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Peso"
        android:layout_centerHorizontal="true"
        android:textSize="80sp"
        android:layout_marginTop="30dp"
        android:inputType="numberDecimal"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/text_peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_peso"
        android:text="@string/peso"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_altura"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Altura"
        android:layout_centerHorizontal="true"
        android:textSize="80sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/text_peso"
        android:inputType="numberDecimal"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/text_altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_altura"
        android:text="@string/altura"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_altura"
        android:text="@string/calcular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>